--- a/.envCI
+++ b/.envCI
@@ -1,4 +1,4 @@
-APP_NAME=Events
+APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:vbDTQmTUMItoJ+76lzryZKcoR0j+XP/srttdvUrbC2Y=
 APP_DEBUG=true
@@ -27,7 +27,6 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
 
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
