--- a/.github/workflows/.ci-cd.yml
+++ b/.github/workflows/.ci-cd.yml
@@ -11,7 +11,7 @@ jobs:
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: false
           MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: events
+          MYSQL_DATABASE: E-commerce
         ports:
           - 3306:3306/tcp
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -42,7 +42,7 @@ jobs:
       #   run: php artisan config:cache
       - name: Prepare the application
         run: |
-          php -r "file_exists('.envCi') || copy('.envCi', '.env');"
+          php -r "file_exists('.env') || copy('.envCi', '.env');"
           php artisan key:generate
 
       - name: Run Migration
