--- a/.github/workflows/.ci-cd.yml
+++ b/.github/workflows/.ci-cd.yml
@@ -10,7 +10,7 @@ jobs:
         image: mysql:latest
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: true
-          MYSQL_ROOT_PASSWORD: ""
+          MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: events
         ports:
           - 3306:3306/tcp
@@ -42,7 +42,7 @@ jobs:
       #   run: php artisan config:cache
       - name: Prepare the application
         run: |
-          php -r "file_exists('.env') || copy('.envCi', '.env');"
+          php -r "file_exists('.env') || copy('.env', '.env');"
           php artisan key:generate
 
       - name: Run Migration
